--- a/job_portal/index.html
+++ b/job_portal/index.html
@@ -1,119 +1,138 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Job Portal</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-
 <header>
     <h1>Job Portal</h1>
-
     <nav>
         <a href="">Home | </a>
         <a href="">Find Jobs | </a>
         <a href="">Post Job | </a>
         <a href="">Login | </a>
         <a href="">Register | </a>
-        <a href="">Profile  </a>
+        <a href="">Profile</a>
     </nav>
 </header>
-
 
 <section id="job-search">
     <h2>Find Your Dream Job</h2>
 
-    <form>
-        <input type="text" placeholder="Job title / keyword">
-        <input type="text" placeholder="Location">
-        <select>
-            <option>Job Type</option>
-            <option>Full Time</option>
-            <option>Part Time</option>
-            <option>Internship</option>
-            <option>Remote</option>
-        </select>
-        <button type="submit">Search</button>
-    </form>
+<form id="searchForm">
+    <input type="text" id="searchTitle" placeholder="Job title / keyword">
+    <input type="text" id="searchLocation" placeholder="Location">
+    <select id="searchType">
+        <option>Job Type</option>
+        <option>Full Time</option>
+        <option>Part Time</option>
+        <option>Internship</option>
+        <option>Remote</option>
+    </select>
+    <button type="submit">Search</button>
+</form>
+
+<p id="noResults" style="display:none; color:red; font-weight:bold;">
+    No exact jobs found. Showing recommendations...
+</p>
+
 </section>
 
 <section id="job-listings">
     <h2>Latest Jobs</h2>
 
-    <article class="job-card">
-        <h3>Frontend Developer</h3>
-        <p>Company: Bgbasket</p>
-        <p>Location: Bangalore</p>
-        <p>Experience: 0–2 years</p>
-        <button>View Details</button>
-    </article>
 
-    <article class="job-card">
-        <h3>Backend Developer</h3>
-        <p>Company: Google</p>
-        <p>Location: Bangalore</p>
-        <p>Experience: 1–3 years</p>
-        <button>View Details</button>
-    </article>
+<article class="job-card">
+    <img class="logo"
+         src="https://logo.clearbit.com/bigbasket.com"
+         alt="logo"
+         style="width:60px;height:60px;object-fit:contain;margin-bottom:8px;"
+         onerror="this.src='https://via.placeholder.com/60'">
+
+    <h3 class="title">Frontend Developer</h3>
+    <p class="company">Company: Bigbasket</p>
+    <p class="location">Location: Bangalore</p>
+    <p class="type">Type: Full Time</p>
+    <button>View Details</button>
+</article>
+<article class="job-card">
+    <img class="logo"
+         src="https://logo.clearbit.com/google.com"
+         alt="logo"
+         style="width:60px;height:60px;object-fit:contain;margin-bottom:8px;"
+         onerror="this.src='https://via.placeholder.com/60'">
+    <h3 class="title">Backend Developer</h3>
+    <p class="company">Company: Google</p>
+    <p class="location">Location: Bangalore</p>
+    <p class="type">Type: Full Time</p>
+    <button>View Details</button>
+</article>
+
+<div id="dynamicJobs"></div>
 </section>
-
 <section id="job-details">
     <h2>Job Details</h2>
+<p><strong>Job Title:</strong> Frontend Developer</p>
+<p><strong>Company:</strong> CU Tech</p>
+<p><strong>Description:</strong></p>
+<button>Apply Now</button>
 
-    <p><strong>Job Title:</strong> Frontend Developer</p>
-    <p><strong>Company:</strong> CU Tech</p>
-    <p><strong>Description:</strong></p>
-    <p>Work with HTML, CSS, JavaScript, React to build UI.</p>
-
-    <button>Apply Now</button>
 </section>
-
 
 <section id="post-job">
     <h2>Post a Job</h2>
 
-    <form>
-        <input type="text" placeholder="Job Title">
-        <input type="text" placeholder="Company Name">
-        <input type="text" placeholder="Location">
-        <select>
-            <option>Job Type</option>
-            <option>Full Time</option>
-            <option>Part Time</option>
-            <option>Internship</option>
-        </select>
-        <textarea placeholder="Job Description"></textarea>
-        <button type="submit">Post Job</button>
-    </form>
-</section>
+<form id="postJobForm">
+    <input type="text" id="jobTitle" placeholder="Job Title">
+    <input type="text" id="companyName" placeholder="Company Name">
+    <input type="text" id="jobLocation" placeholder="Location">
+    <input type="text" id="companyLogo" placeholder="Company Logo URL (optional)">
+    <select id="jobType">
+        <option>Job Type</option>
+        <option>Full Time</option>
+        <option>Part Time</option>
+        <option>Internship</option>
+    </select>
+    <textarea id="jobDesc" placeholder="Job Description"></textarea>
+    <button type="submit">Post Job</button>
+</form>
 
+
+</section>
 
 <section id="auth">
     <h2>User Authentication</h2>
 
-    <form>
-        <input type="email" placeholder="Email">
-        <input type="password" placeholder="Password">
-        <button type="submit">Login</button>
-    </form>
-</section>
+<form>
+    <input type="email" placeholder="Email">
+    <input type="password" placeholder="Password">
+    <button type="submit">Login</button>
+</form>
 
+
+</section>
 
 <section id="profile">
     <h2>User Profile</h2>
 
-    <p>Name: Gourav Kumar Yadav</p>
-    <p>Email: gouravyadav0407@email.com</p>
-    <p>Role: Job Seeker</p>
+<p>Name: Gourav Kumar Yadav</p>
+<p>Email: gouravyadav0407@email.com</p>
+<p>Role: Job Seeker</p>
 
-    <button>Edit Profile</button>
+<button>Edit Profile</button>
+
+
 </section>
 
-
 <footer>
-    <p>© ke khe thaa gaadi rokega </p>
+    <p>© ke khe thaa gaadi rokega</p>
 </footer>
+
+<script src="script.js"></script>
 
 </body>
 </html>
